# ai-comment-sweeper

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/memory/: constitution.md
specs/master/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/master/contracts/: documentation-processor-prompts.md  source-processor-prompts.md
